assets/css/screen.css
/* ... */
.post-card:hover {
    -webkit-box-shadow: rgba(39, 44, 49, .07) 8px 28px 50px, rgba(39, 44, 49, .04) 1px 6px 12px;
    box-shadow: 8px 28px 50px rgba(39, 44, 49, .07), 1px 6px 12px rgba(39, 44, 49, .04);
    -webkit-transition: all .4s ease;
    transition: all .4s ease;
    -webkit-transform: translate3D(0, -1px, 0) scale(1.02);
    transform: translate3D(0, -1px, 0) scale(1.02)
}

.post-card-image-link {
    position: relative;
    overflow: hidden;
    display: block;
    border-radius: 5px 5px 0 0
}

.post-card[class*="post-access-"] .post-card-image-link::after {
    background-color: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(3px);
}

.post-card.keep-ratio[class*="post-access-"] .post-card-image-link::after {
    position: absolute;
    inset: 0;
    padding-bottom: 0;
}

.post-card.keep-ratio:not(.post-card-large):not(.post-card-full) .post-card-image-link::after {
    padding-bottom: 0;
}

.post-card-image {
    inset: 0;
    background: var(--color-lightgrey) no-repeat center center;
    object-fit: cover;
    width: 100%;
    height: 200px;
    -o-object-fit: cover;
}

.post-card.keep-ratio:not(.post-card-large):not(.post-card-full) .post-card-image {
    position: static;
}

.post-card-access {
    position: absolute;
    inset: 0;
    z-index: 10;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 4px;
    font-size: 1.5rem;
    font-weight: 600;
    color: #fff;
}

.post-card-content-link {
    position: relative;
    display: block;
    color: var(--color-darkdarkgrey);
    -webkit-box-flex: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    display: block;
    padding: 25px 25px 0;
    text-decoration: none;
}

.post-card-content-link:hover {
    text-decoration: none;
}

.post-feed .no-image .post-card-content-link {
    padding: 0;
}

.no-image .post-card-header {
    margin-top: 0;
}

.post-card-tags {
    display: flex;
    align-items: center;
    gap: 12px;
    margin: 0 0 10px;
    color: var(--color-secondary-text);
    font-size: 1.4rem;
    font-weight: 600;
    letter-spacing: -0.005em;
    line-height: 1;
}

.post-card-featured {
    position: relative;
    display: flex;
    align-items: center;
    gap: 3px;
    padding-left: 18px;
    color: var(--ghost-accent-color);
}

.post-card-featured svg {
    position: absolute;
    left: 0;
}

.post-card-title {
    margin: 0;
    font-size: 2rem;
    font-weight: 800;
    line-height: 1.2;
}

.post-card-content-link:hover .post-card-title {
    opacity: 0.9;
}

.no-image .post-card-title {
    margin-top: 0;
}

.has-serif-title .post-card-title {
    font-family: var(--font-serif);
    letter-spacing: -0.005em;
}

.post-card-title svg {
    margin-top: -3px;
    margin-left: -1px;
}

.post-card-content {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    -webkit-box-flex: 1;
    -ms-flex-positive: 1;
    display: -webkit-box;
    display: -ms-flexbox;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between
}

.post-card-excerpt {
    display: -webkit-box;
    overflow-y: hidden;
    margin-top: 12px;
    max-width: 720px;
    font-size: 1.6rem;
    line-height: 1.5;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    word-break: break-word;
    font-family: Georgia, serif
}

.has-sans-body .post-card-excerpt {
    font-family: var(--font-sans);
}

.post-card:not(.post-card-large):not(.post-card-full):not(.dynamic):not(.no-image) .post-card-excerpt {
    -webkit-line-clamp: 2;
}

:is(.tag-template, .author-template) .post-card-excerpt {
    margin-top: 6px;
}

:is(.tag-template, .author-template) .post-card-large .post-card-excerpt {
    display: block;
    overflow-y: auto;
}

.post-card-meta {
    display: flex;
    gap: 6px;
    color: var(--color-secondary-text);
    display: -webkit-box;
    display: -ms-flexbox;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-box-align: end;
    -ms-flex-align: end;
    align-items: flex-end;
    padding: 0 25px 25px
}

.post-card-meta>* {
    display: flex;
    align-items: center;
    gap: 6px;
}

.post-card-meta>*+*:not(script)::before {
    width: 2px;
    height: 2px;
    background-color: var(--color-secondary-text);
    border-radius: 50%;
}

.home-template .site-header:after {
    display: none
}

@media (max-width:650px) {
    .post-feed {
        padding-top: 2vw
    }
    .post-card {
        margin: 0 2px 5vw
    }
}

.page-template .site-main,
.post-template .site-main {
    margin: 0 auto;
}

.post-full-header {
    padding: 5.5vw 3vw .5vw;
    background: rgba(255, 255, 255, 0.86);
    border-radius: 5px;
    max-width: 90%;
}

@media (max-width:500px) {
    .post-full-header {
        padding: 14vw 3vw 10vw
    }
    .post-full-meta {
        font-size: 1.2rem;
        line-height: 1.3em
    }
    .post-full-title {
        font-size: 2.9rem
    }
    .post-full-image {
        margin-bottom: 4vw;
        height: 350px
    }
    .post-full-content {
        padding: 0
    }
    .post-full-content:after,
    .post-full-content:before {
        display: none
    }
}

.post-full-meta, 
.post-full-meta a{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    color: #738a94;
    font-size: 1.4rem;
    font-weight: 600;
    text-transform: uppercase
}

.post-full-meta-date,
.post-card-meta-date  {
    color: #3eb0ef
}

.post-full-title {
    margin: 0;
    color: #090a0b;
}

.date-divider {
    display: inline-block;
    margin: 0 6px 1px
}
/* ... */

